# telescope-ui

./: .gitignore  LICENSE  README.md  pyproject.toml
src/telescope/: __init__.py  __main__.py  cli.py
src/telescope/server/: db.py  ingest.py  main.py  run_code.py
ui/: .gitignore  components.json  index.html  package-lock.json  package.json  vite.config.ts
ui/app/: globals.css  page.tsx  providers.tsx
ui/app/about/: page.tsx
ui/app/evals/: page.tsx
ui/app/infra/: page.tsx
ui/app/metrics/: page.tsx
ui/app/rollouts/: page.tsx
ui/app/rollouts-discarded/: page.tsx
ui/app/timeline/: page.tsx
ui/app/topology/: page.tsx
ui/components/: app-sidebar.tsx  combined-timeline-chart.tsx  custom-metrics-view.tsx  database-dialog.tsx  gpu-metric-chart.tsx  logs-viewer.tsx  middle-ellipsis-label.tsx  model-architecture-viewer.tsx  no-run-selected-state.tsx  pagination-controls.tsx  rollouts-metrics-panel.tsx  rollouts-sample-picker-sidebar.tsx  rollouts-view.tsx  run-code-compare-dialog.tsx  run-code-visualizer.tsx  run-color-picker.tsx  run-config-compare-dialog.tsx  run-config-panel.tsx  sample-details-dialog.tsx  step-metrics-charts.tsx  system-metrics-charts.tsx  topology-viewer.tsx
ui/components/ui/: alert-dialog.tsx  collapsible.tsx  dialog.tsx  dropdown-menu.tsx  popover.tsx  scroll-area.tsx  select.tsx  toggle-group.tsx  toggle-with-input.tsx  toggle.tsx  tooltip.tsx
ui/hooks/: use-run-data.ts
ui/lib/: atoms.ts  constants.ts  format.ts  parse-model-architecture.ts  run-name.ts  types.ts
ui/src/: App.tsx  main.tsx
